--- a/getting-started/index.html
+++ b/getting-started/index.html
@@ -8,6 +8,7 @@
   <body>
     <div id="app">
       {{ message }}
+      hello world
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -15,9 +16,15 @@
       new Vue({
         el: '#app',
         data: {
-          message: 'Hello Vue.js'
+          message: 'Hello Vue.js my name is ejlee'
         }
       })
+      var div = document.querySelector('#app')
+      console.log(div);
+      div.innerHTML = 'hello ejlee'
+
+    
+      
     </script>
   </body>
 </html>
